# engi_graph

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: article_routes.py  category_routes.py  dependencies.py  ingestion_routes.py  rag_routes.py  search_routes.py  source_routes.py
app/core/: config.py  database.py  database_initializer.py
app/domain/: results.py
app/embeddings/: base.py  dummy_embedder.py  local_embedder.py  openai_embedder.py
app/ingestion/: chunker.py  classifier.py  cleaner.py  crawl_run_article_processor.py  crawler.py  deduplicator.py  extractor.py  fetcher.py  orchestrator.py  persistence.py  pipeline.py
app/llm/: base.py  dummy_llm.py  litellm_client.py
app/models/: __init__.py  article.py  article_chunk.py  category.py  crawl_item.py  crawl_run.py  rag_query.py  rag_result.py  source.py
app/rag/: answer_generator.py  article_aggregator.py  context_builder.py  filter_extractor.py  multi_query_generator.py  query_analyzer.py  query_rewriter.py  reranker.py  retriever.py
app/repositories/: article_chunk_repository.py  article_repository.py  category_repository.py  crawl_item_repository.py  crawl_run_repository.py  rag_query_repository.py  rag_result_repository.py  source_repository.py
app/schemas/: article_schema.py  category_schema.py  ingestion_schema.py  rag_schema.py  search_schema.py  source_schema.py
app/services/: article_service.py  category_service.py  factory.py  ingestion_jobs.py  ingestion_service.py  rag_service.py  search_service.py  source_service.py
app/vectorstores/: base.py  chroma_store.py  in_memory_store.py  (+1 more)
data/: query_commands.md  seeds.py
(+16 files in other folders)
