[project]
name = "engigraph"
version = "0.1.0"
description = "RAG-powered engineering blog knowledge base"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{name = "EngiGraph"}]
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<0.28",
    "feedparser>=6.0,<7.0",
    "trafilatura>=1.9,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=6.1.1",
    "tiktoken>=0.7,<1.0",
    "openai>=1.30,<2.0",
    "litellm>=1.40,<2.0",
    "qdrant-client>=1.9,<2.0",
    "chromadb>=0.5,<1.0",
    "aiosqlite>=0.20,<1.0",
    "sentence-transformers>=5.5.1,<6.0",
    "torch>=2.12.0,<3.0",
    "certifi>=2026.5.20",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
